# goodrating

./: .clang-tidy  .gitignore  CMakeLists.txt  DP_data.md  README.md  SP_data.md  generate_tables.py  generateseeds.sh  gettabledata.sh  goodrating.cpp  goodrating.sln  goodrating.vcxproj  goodrating.vcxproj.filters  producedata.sh  scrapeir_continue.sh  scrapeir_start.sh  table_level_ratings_dp.csv  table_level_ratings_sp.csv  v2_from_v1.py
lr2irscraper/: .clang-format  CMakeLists.txt  lr2irscraper.cpp  vcpkg.json
